[gd_scene load_steps=7 format=3 uid="uid://ctjd27wlt2qag"]

[ext_resource type="Script" path="res://game/levels/level_manager.gd" id="1_i1bdx"]
[ext_resource type="PackedScene" uid="uid://fyvk5b7uo0am" path="res://game/ui/level_ui/level_ui.tscn" id="2_pdga4"]
[ext_resource type="Script" path="res://game/levels/spawn_point.gd" id="3_h5e1n"]
[ext_resource type="PackedScene" uid="uid://dpxkumjowe6r0" path="res://game/scrapbook_objects/objects/you.tscn" id="4_db6hb"]
[ext_resource type="PackedScene" uid="uid://bj0s44imfdpms" path="res://game/scrapbook_objects/objects/big_bus_1.tscn" id="5_cop3u"]
[ext_resource type="PackedScene" uid="uid://ducm0jqonsnal" path="res://game/scrapbook_objects/objects/bus_blue.tscn" id="6_okm7p"]

[node name="Level" type="Node2D" groups=["level_map"]]
script = ExtResource("1_i1bdx")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 150)

[node name="CanvasLayer" parent="." instance=ExtResource("2_pdga4")]
unique_name_in_owner = true

[node name="Background" type="Area2D" parent="." groups=["background"]]
z_index = -100

[node name="Sprite2D" type="Sprite2D" parent="Background"]
position = Vector2(400, 150)
scale = Vector2(0.5, 0.5)

[node name="SpawnPoints" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="HumanSpawn" type="Marker2D" parent="SpawnPoints"]
z_index = 7
position = Vector2(634, 264)
script = ExtResource("3_h5e1n")
accepts = Array[PackedScene]([ExtResource("4_db6hb")])
scale_factor = 0.12

[node name="SpawnPoint3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(440, 91)
script = ExtResource("3_h5e1n")
accepts = Array[PackedScene]([ExtResource("5_cop3u"), ExtResource("6_okm7p")])
scale_factor = 0.019

[node name="SpawnPoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(440, 170)
script = ExtResource("3_h5e1n")
accepts = Array[PackedScene]([ExtResource("6_okm7p"), ExtResource("5_cop3u")])
scale_factor = 0.025

[node name="SpawnPoint" type="Marker2D" parent="SpawnPoints"]
position = Vector2(440, 261)
script = ExtResource("3_h5e1n")
accepts = Array[PackedScene]([ExtResource("5_cop3u"), ExtResource("6_okm7p")])
scale_factor = 0.03

[node name="QuestManager" type="Node" parent="."]
unique_name_in_owner = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["audio_player"]]
unique_name_in_owner = true

[editable path="CanvasLayer"]
